[2018-08-18 19:01:02 +0200]  update packages.xml (budgie)                                               karasu      {a3ee5b81}
[2018-08-18 18:38:56 +0200]  gnome-themes-standard removed.                                             karasu      {2d9e8af3}
[2018-08-17 17:20:16 +0200]  Fix packages.xml                                                           karasu      {0af03381}
[2018-08-17 15:14:54 +0200]  Remove hunspell installation (temporary fix)                               karasu      {88d720c5}
[2018-08-17 15:13:25 +0200]  Remove antergos-common-meta                                                karasu      {3f6d48c6}
[2018-08-17 15:12:41 +0200]  Do not use meta packages (temporary)                                       karasu      {dda0ae16}
[2018-08-08 11:30:43 +0200]  Use yay as AUR helper                                                      karasu      {415a686d}
[2018-07-11 00:53:17 +0200]  Forgot these two                                                           karasu      {5cefd815}
[2018-07-11 00:51:55 +0200]  Add documentation (sphinx)                                                 karasu      {03cb064b}
[2018-06-24 02:07:42 +0200]  zd1211-firmware has been removed from arch core                            karasu      {624f39f0}
[2018-05-24 17:34:00 +0200]  Fixes #885 (unharmful)                                                     karasu      {d3d1cd08}
[2018-05-17 15:20:22 +0200]  Add eventbox also to detect when the camera feed is clicked on             karasu      {77c26b1b}
[2018-05-17 14:49:34 +0200]  Add copyright notice                                                       karasu      {0b9d058d}
[2018-05-17 14:45:05 +0200]  Disable webcam in user_info (we need to store an avatar image from ..      karasu      {7c3556bc}
[2018-05-17 14:38:33 +0200]  gocryptfs module interface seems to work. Now we need cnchi to setu..      karasu      {970eb687}