@@ -1,3 +1,5 @@
+[2018-08-23 18:01:02 +0200]  Arch dropped kde-l10n packages                                             karasu      {85a9f65b}
+[2018-08-23 08:49:20 +0200]  [packages.xml] deepin-notifications has been removed                       karasu      {311976fe}
 [2018-08-18 19:01:02 +0200]  update packages.xml (budgie)                                               karasu      {a3ee5b81}
 [2018-08-18 18:38:56 +0200]  gnome-themes-standard removed.                                             karasu      {2d9e8af3}
 [2018-08-17 17:20:16 +0200]  Fix packages.xml                                                           karasu      {0af03381}
